--- a/print/requirements.txt
+++ b/print/requirements.txt
@@ -1,14 +1,11 @@
-asgiref==3.3.1
-beautifulsoup4==4.9.3
+asgiref==3.6.0
+beautifulsoup4==4.12.0
 bs4==0.0.1
-Django==3.1.4
+Django==4.1.7
 image==1.5.33
-imutils==0.5.3
-numpy==1.19.4
-opencv-python==4.4.0.46
+pdfmerger==0.5.0
 Pillow==8.0.1
 PyPDF2==1.26.0
-pytz==2020.5
-six==1.15.0
-soupsieve==2.1
-sqlparse==0.4.1
+six==1.16.0
+soupsieve==2.4
+sqlparse==0.4.3
